[tool.poetry]
name = "wyn-keras"
version = "0.1.6"
description = "Our customized keras package for popular image classifier techniques."
authors = ["Yiqiao Yin <eagle0504@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.7.1"
numpy = "1.25.2"
tensorflow = "2.15.0"
tensorflow-addons = "0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
